<resources>
    <string name="app_name">Budgeting Application</string>
    <string name="about">About</string>
    <string name="add_spending">Add spending</string>
    <string name="clear_all_entries">Clear all entries</string>
    <string name="display_current_status">Display current status</string>
    <string name="home">Home</string>
    <string name="transportation">Transportation</string>
    <string name="_display_status_hint">1234.95</string>
    <string name="home_food">Home food</string>
    <string name="junk_food">Junk Food</string>
    <string name="entertainment">Entertainment</string>
    <string name="housing">Housing</string>
    <string name="gifts">Gifts</string>

    <string name="current_status_of_your_expenses"><tt>Current status of your expenses</tt></string>
    <string name="update">Update</string>
    <string name="money_spent">Money Spent</string>
    <string name="category">Category</string>
    <string name="reset_button">Reset all categories</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="amount">0.00</string>
    <string name="format">%.2f</string>
    <string name="onAddSpending">Amount added successfully</string>

    <string-array name="categories_array">
        <item>Transportation</item>
        <item>Home food</item>
        <item>Junk food</item>
        <item>Entertainment</item>
        <item>Housing</item>
        <item>Gifts</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kirill_parhomenco_1933830">Kirill Parhomenco - 1933830</string>
    <string name="nael_louis_1934115">Nael Louis - 1934115</string>
    <string name="zacharie_makeen_1938801">Zacharie Makeen - 1938801</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="alec_phan_1834104">Alec Phan - 1834104</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
</resources>