<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayCurrentStatusActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/filled_square"
            android:backgroundTint="@color/dark_jungle_green"
            android:orientation="vertical"
            android:layout_margin="15dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transportation"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_display_status_hint"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/filled_square"
            android:backgroundTint="@color/myrtle_green"
            android:orientation="vertical"
            android:layout_margin="15dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_food"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_display_status_hint"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textAlignment="center"/>

        </LinearLayout>
        
        <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/filled_square"
        android:backgroundTint="@color/red_pigment"
        android:orientation="vertical"
        android:layout_margin="15dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/junk_food"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_display_status_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"/>

    </LinearLayout>
        
        <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/filled_square"
        android:backgroundTint="@color/medium_purple"
        android:orientation="vertical"
        android:layout_margin="15dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entertainment"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_display_status_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"/>

    </LinearLayout>
        
        <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/filled_square"
        android:backgroundTint="@color/redwood"
        android:orientation="vertical"
        android:layout_margin="15dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/housing"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_display_status_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"/>

    </LinearLayout>
        
        <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/filled_square"
        android:backgroundTint="@color/wintergreen_dream"
        android:orientation="vertical"
        android:layout_margin="15dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gifts"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_display_status_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"/>

    </LinearLayout>


    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>